force-app/main/default/objects/Scoring_Subscription__c/Scoring_Subscription__c.object-meta.xml
<CustomObject>
    <label>Scoring Subscription</label>
    <nameField>
        <displayFormat>Subscription-{00000}</displayFormat>
        <label>Scoring Subscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Subscription</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>