force-app/main/default/objects/Scoring_Subscription__c/fields/Account_Scoring_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Scoring_Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Account Scoring Unique ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>