force-app/main/default/objects/Scoring_Subscription__c/fields/Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Subscription Date</label>
    <type>Date</type>
</CustomField>